--- a/_posts/2017-06-24-thinking.markdown
+++ b/_posts/2017-06-24-thinking.markdown
@@ -4,16 +4,25 @@ title: 从中西方的烹饪看中西方的思维
 category: misc
 ---
 
-有朋友在德国，他曾经发过我一些德国厨房的照片，感觉像个干净整洁的“小工厂”，跟我印象中的厨房的概念，差异甚大。也许是我见识短浅的缘故吧，忍不住感慨一番——这一点也请读者们原谅，老时脆弱的心灵似乎很容易大惊小怪，并且小题大做。这也不是一天两天、一回两回的事了。
-更令我感慨的，是他们的烹饪指南。做多少菜，放多少盐，多少酱油之类的，都高度量化，精确到多少多少克，所有数据都严格标明，即使不会做饭的，只要严格按照规定流程和高度量化的标准去操作，做出来的味道也不会相差太大。这一点，跟我们的烹饪书籍中有关做饭做菜的指导，是有很大区别的。我们的烹饪书中，经常可以看到“盐少许”、“酱油适量”、“味精适量”之类的表述，对于生手来说，是非常难以把握的。起码要摸索很多天后，饱尝很多挫折与失败之后，才能慢慢理解“少许”与“适量”的确切含义：“适量”是多少、“少许”又是多少，当然，在做不同菜的时候，“少许”与“适量”又要跟着变化……总而言之，这是一些不断变化含义的词汇。
+有朋友在德国，他曾经发过我一些德国厨房的照片，感觉像个干净整洁的“小工厂”，跟我印象中的厨房的概念，差异甚大。也许是我见识短浅的缘故吧，忍不住感慨一番——这一点也请读者们原谅，
+老时脆弱的心灵似乎很容易大惊小怪，并且小题大做。这也不是一天两天、一回两回的事了。
+更令我感慨的，是他们的烹饪指南。做多少菜，放多少盐，多少酱油之类的，都高度量化，精确到多少多少克，所有数据都严格标明，即使不会做饭的，只要严格按照规定流程和高度量化的标准去操作，
+做出来的味道也不会相差太大。这一点，跟我们的烹饪书籍中有关做饭做菜的指导，是有很大区别的。我们的烹饪书中，经常可以看到“盐少许”、“酱油适量”、“味精适量”之类的表述，对于生手来说，是非常难以把
+握的。起码要摸索很多天后，饱尝很多挫折与失败之后，才能慢慢理解“少许”与“适量”的确切含义：“适量”是多少、“少许”又是多少，当然，在做不同菜的时候，“少许”与“适量”又要跟着变化……总而言之，这是一些
+不断变化含义的词汇。
 表述模糊的结果，必然是成本的上升
-表述模糊的结果，必然是失败概率的上升，当然也必然导致成本的上升。首先，你必须花费很多时间成本去理解，去摸索，在一次次失败中，慢慢地总结教训，并在一次次的成功中累积经验。其次，你必须付出多次失败的代价，为表述的模糊埋单。表述不确切的后果，是显而易见的。
+表述模糊的结果，必然是失败概率的上升，当然也必然导致成本的上升。首先，你必须花费很多时间成本去理解，去摸索，在一次次失败中，慢慢地总结教训，并在一次次的成功中累积经验。其次，你必须付出多次
+失败的代价，为表述的模糊埋单。表述不确切的后果，是显而易见的。
 放在制度层面也是。一个刚性的具体化的规则，更容易让人遵守，而一个表述模糊的规则，则更容易让人钻空子。更多的时候，是人们面对模棱两可的表述，无所适从。
-问题在于，模糊的表述为什么能历久弥新经久不衰呢？从烹饪的角度来看，模糊的表述，让表述者变得深不可测，在这种神秘色彩笼罩之下，更容易建立起权威的形象。更关键的一点是，这种表述由于不确切，不容易留下把柄，对于权威者而言，可谓进退自如。
-同时，含糊其辞的表述，让厨子有了更大的发挥空间，经验丰富且能发挥好的，往往更为优秀，更为出类拔萃，这样的人，理所当然地成为表率，成为标兵，成为模范。而在标准的统一化的约束之下，人们做出来的菜连味道都区别不大，就很难区分，也很难让某个人脱颖而出，成为优秀的人。而且，标准的统一的高度量化的表述，对食材的要求非常具体，标准非常高——在这方面，很难有妥协的余地。
+问题在于，模糊的表述为什么能历久弥新经久不衰呢？从烹饪的角度来看，模糊的表述，让表述者变得深不可测，在这种神秘色彩笼罩之下，更容易建立起权威的形象。更关键的一点是，这种表述由于不确切，不容
+易留下把柄，对于权威者而言，可谓进退自如。
+同时，含糊其辞的表述，让厨子有了更大的发挥空间，经验丰富且能发挥好的，往往更为优秀，更为出类拔萃，这样的人，理所当然地成为表率，成为标兵，成为模范。而在标准的统一化的约束之下，人们做出来的
+菜连味道都区别不大，就很难区分，也很难让某个人脱颖而出，成为优秀的人。而且，标准的统一的高度量化的表述，对食材的要求非常具体，标准非常高——在这方面，很难有妥协的余地。
 西方人不树立模范，不树立标兵，更注重整体的协调性的发展
-这可能是中西方理念的一个区别。西方人一般不评选模范，不树立标兵，在一个生产线上，你做得出类拔萃，甚至可能导致整个流程被破坏。所以，西方人更注重整体的协调性的发展。而我们，即使在统一的流程下，即使在同一条生产线上，也可以创造出做得最优秀的人——这恰恰从另一个侧面证明了我们在整体发展中暴露出来的一个严重缺陷与不足。当然，如果站在另一个角度来看，也可以认为这是我们的强项。
-用数不清的各种化学添加剂生产出来的食材，配上N代地沟油做出来的饭菜依然味道可口，这一点，的确让老外唏嘘不已，甚至五体投地。老外们的量化工具，在这里，是毫无用处的。区别体现在饭后，当人家吃完饭悠然自得地去打高尔夫球的时候，我们不得不带着视死如归的表情走向厕所——尽管久经考验.
+这可能是中西方理念的一个区别。西方人一般不评选模范，不树立标兵，在一个生产线上，你做得出类拔萃，甚至可能导致整个流程被破坏。所以，西方人更注重整体的协调性的发展。而我们，即使在统一的流程下
+，即使在同一条生产线上，也可以创造出做得最优秀的人——这恰恰从另一个侧面证明了我们在整体发展中暴露出来的一个严重缺陷与不足。当然，如果站在另一个角度来看，也可以认为这是我们的强项。
+用数不清的各种化学添加剂生产出来的食材，配上N代地沟油做出来的饭菜依然味道可口，这一点，的确让老外唏嘘不已，甚至五体投地。老外们的量化工具，在这里，是毫无用处的。区别体现在饭后，当人家吃完
+饭悠然自得地去打高尔夫球的时候，我们不得不带着视死如归的表情走向厕所——尽管久经考验.
 
 -------------------------
 
